JSW Devsb/src/objects/Plant_Master__c.object
<CustomObject>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Plant Masters</relationshipLabel>
        <relationshipName>Plant_Masters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Depot_Customer__c</fullName>
        <label>Depot Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_Code__c</fullName>
        <label>Plant Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_Name__c</fullName>
        <label>Plant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_District_Code__c</fullName>
        <label>Sales District Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_District_Name__c</fullName>
        <label>Sales District Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Name__c</fullName>
        <label>State Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Plant Master</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Plant MAster Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plant Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>